new: Добавил реализацию аппаратных задержек на SysTick

--- a/firmware/source/Makefile
+++ b/firmware/source/Makefile
@@ -39,7 +39,9 @@ CXX_SOURCES = \
 system/startup/startupF401.cpp \
 application/src/main.cpp \
 library/bsp/src/Pinout.cpp \
-library/bsp/src/Periphery.cpp
+library/bsp/src/Periphery.cpp \
+library/bsp/src/Delay.cpp \
+application/src/ili9488.cpp 
 
 #######################################
 # Macros for GCC
