new: Добавил основной класс для логики приложения

--- a/firmware/source/Makefile
+++ b/firmware/source/Makefile
@@ -38,6 +38,7 @@ library/cmsis/src/system_stm32f4xx.c
 CXX_SOURCES = \
 system/startup/startupF401.cpp \
 application/src/main.cpp \
+application/src/Application.cpp \
 library/bsp/src/Pinout.cpp \
 library/bsp/src/Periphery.cpp \
 library/bsp/src/Delay.cpp \
